--- a/TPM_Ryugu/TPM_Ryugu.ipynb
+++ b/TPM_Ryugu/TPM_Ryugu.ipynb
@@ -2,10 +2,43 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "dd690846",
+   "metadata": {},
+   "source": [
+    "# Thermophysical modeling (TPM) of asteroid Ryugu"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "9ecb0b76",
    "metadata": {},
    "source": [
-    "# Load packages"
+    "## Load packages"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1637fc61",
+   "metadata": {},
+   "source": [
+    "Install the necessary packages only for the first time."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "321819e9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# using Pkg\n",
+    "# Pkg.add(\"SPICE\")\n",
+    "# Pkg.add(\"Downloads\")\n",
+    "# Pkg.add(\"StaticArrays\")\n",
+    "# Pkg.add(\"Rotations\")\n",
+    "# Pkg.add(\"CairoMakie\")\n",
+    "\n",
+    "# Pkg.add(url=\"https://github.com/Astroshaper/AsteroidThermoPhysicalModels.jl\")"
    ]
   },
   {
@@ -16,11 +49,14 @@
    "outputs": [],
    "source": [
     "import AsteroidThermoPhysicalModels\n",
-    "import GLMakie\n",
-    "import JLD2\n",
     "import SPICE\n",
-    "import Downloads\n",
-    "import Statistics"
+    "\n",
+    "using Downloads\n",
+    "using StaticArrays\n",
+    "using Rotations\n",
+    "using CairoMakie\n",
+    "\n",
+    "include(\"../plot_shape.jl\");"
    ]
   },
   {
@@ -28,7 +64,9 @@
    "id": "1ee114e7",
    "metadata": {},
    "source": [
-    "# Download files"
+    "## Download necessary files\n",
+    "- SPICE kernels\n",
+    "- Shape model"
    ]
   },
   {
@@ -44,6 +82,7 @@
     "    \"fk/hyb2_ryugu_v01.tf\",\n",
     "    \"spk/2162173_Ryugu.bsp\",\n",
     "]\n",
+    "\n",
     "paths_shape = [\n",
     "    \"SHAPE_SFM_49k_v20180804.obj\",\n",
     "]\n",
@@ -54,6 +93,7 @@
     "    mkpath(dirname(filepath))\n",
     "    isfile(filepath) || Downloads.download(url_kernel, filepath)\n",
     "end\n",
+    "\n",
     "for path_shape in paths_shape\n",
     "    url_shape = \"https://data.darts.isas.jaxa.jp/pub/hayabusa2/paper/Watanabe_2019/$(path_shape)\"\n",
     "    filepath = joinpath(\"shape\", path_shape)\n",
@@ -67,38 +107,81 @@
    "id": "2254bd2f",
    "metadata": {},
    "source": [
-    "# Load data with SPICE"
+    "## Load SPICE kernels"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e7fc8c55",
+   "id": "71ee97f9",
    "metadata": {},
    "outputs": [],
    "source": [
     "for path_kernel in paths_kernel\n",
     "    filepath = joinpath(\"kernel\", path_kernel)\n",
     "    SPICE.furnsh(filepath)\n",
-    "end\n",
-    "et_start = SPICE.utc2et(\"2018-07-01T00:00:00\")\n",
-    "et_end   = SPICE.utc2et(\"2018-07-01T01:00:00\")\n",
-    "step     = 76.3262  # Rotation of 1 deg\n",
-    "et_range = et_start : step : et_end\n",
-    "@show et_range\n",
-    "@show length(et_range)\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "83738b61",
+   "metadata": {},
+   "source": [
+    "Prepare ephemerides for TPM"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "101f8405",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "P = SPICE.convrt(7.63262, \"hours\", \"seconds\")  # Rotation period of Ryugu\n",
     "\n",
-    "# Indices of et_range to be saved.\n",
-    "# Save only the last rotation.\n",
-    "save_range = findall(et_range .> et_range[end] - 7.63262 * 3600)\n",
-    "@show save_range[begin]\n",
-    "@show save_range[end]\n",
-    "@show length(save_range);\n",
+    "ncycles = 5  # Number of cycles to perform TPM\n",
+    "nsteps_in_cycle = 360  # Number of time steps in one rotation period\n",
     "\n",
-    "# Sun's position in the RYUGU_FIXED frame\n",
-    "sun_ryugu = [SPICE.spkpos(\"SUN\", et, \"RYUGU_FIXED\", \"None\", \"RYUGU\")[1]*1000 for et in et_range]\n",
-    "# Transformation matrix from RYUGU_FIXED to J2000\n",
-    "RYUGU_TO_J2000 = [SPICE.pxform(\"RYUGU_FIXED\", \"J2000\", et) for et in et_range]\n",
+    "et_begin = SPICE.utc2et(\"2018-07-01T00:00:00\")  # Start time of TPM\n",
+    "et_end   = et_begin + P * ncycles  # End time of TPM\n",
+    "et_range = range(et_begin, et_end; length=nsteps_in_cycle*ncycles+1);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4ebb0700",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "Ephemerides data for input into TPM.\n",
+    "\n",
+    "- `time` : Ephemeris times\n",
+    "- `sun`  : Sun's position in the RYUGU_FIXED frame\n",
+    "\"\"\"\n",
+    "ephem = (\n",
+    "    time = collect(et_range),\n",
+    "    sun  = [SVector{3}(SPICE.spkpos(\"SUN\", et, \"RYUGU_FIXED\", \"None\", \"RYUGU\")[1]) * 1000 for et in et_range],\n",
+    ");"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "47f731f5",
+   "metadata": {},
+   "source": [
+    "Clear the SPICE kernels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "82f1e4c8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "SPICE.kclear()"
    ]
   },
@@ -107,7 +190,8 @@
    "id": "de29e27d",
    "metadata": {},
    "source": [
-    "# Load obj file"
+    "# Load a shape model\n",
+    "The OBJ format is only supported."
    ]
   },
   {
@@ -117,13 +201,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path_obj = joinpath(\"shape\", \"SHAPE_SFM_49k_v20180804.obj\")\n",
-    "path_jld = joinpath(\"shape\", \"SHAPE_SFM_49k_v20180804.jld2\")\n",
-    "if isfile(path_jld)\n",
-    "    shape = AsteroidThermoPhysicalModels.ShapeModel(path_jld; scale=1000, find_visible_facets=true, save_shape=true)\n",
-    "else\n",
-    "    shape = AsteroidThermoPhysicalModels.ShapeModel(path_obj; scale=1000, find_visible_facets=true, save_shape=true)\n",
-    "end"
+    "path_obj = joinpath(\"shape\", \"ryugu_test.obj\")  # Small model for test\n",
+    "# path_obj = joinpath(\"shape\", \"SHAPE_SFM_49k_v20180804.obj\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "62958a7e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "shape = AsteroidThermoPhysicalModels.load_shape_obj(path_obj; scale=1000, find_visible_facets=true)"
    ]
   },
   {
@@ -131,7 +220,15 @@
    "id": "db9ab824",
    "metadata": {},
    "source": [
-    "# TPM"
+    "# TPM setup and execution"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "646087fc",
+   "metadata": {},
+   "source": [
+    "Thermal properties"
    ]
   },
   {
@@ -141,20 +238,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "thermo_params = AsteroidThermoPhysicalModels.ThermoParams(\n",
-    "    A_B   = 0.04,  # Bolometric Bond albedo\n",
-    "    A_TH  = 0.0,\n",
-    "    k     = 0.1,\n",
-    "    ρ     = 1270.0,\n",
-    "    Cp    = 600.0,\n",
-    "    ϵ     = 1.0,\n",
-    "    t_bgn = et_range[begin],\n",
-    "    t_end = et_range[end],\n",
-    "    Nt    = length(et_range),\n",
-    "    z_max = 0.6,\n",
-    "    Nz    = 41,\n",
-    "    P     = 7.63262 * 3600,\n",
+    "k  = 0.1     # Thermal conductivity\n",
+    "ρ  = 1270.0  # Material density\n",
+    "Cₚ = 600.0   # Heat capacity at constant pressure\n",
+    "    \n",
+    "l = AsteroidThermoPhysicalModels.thermal_skin_depth(P, k, ρ, Cₚ)  # Thermal skin depth\n",
+    "Γ = AsteroidThermoPhysicalModels.thermal_inertia(k, ρ, Cₚ)        # Thermal inertia"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1d50a811",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "thermo_params = AsteroidThermoPhysicalModels.thermoparams(\n",
+    "    P       = P,     # Rotation period\n",
+    "    l       = l,     # Thermal skin depth\n",
+    "    Γ       = Γ,     # Thermal inertia\n",
+    "    A_B     = 0.04,  # Bond albedo\n",
+    "    A_TH    = 0.0,   # Albedo in thermal infrared\n",
+    "    ε       = 1.0,   # Emissivity\n",
+    "    z_max   = 0.6,   # Maximum depth to solve the 1-D heat conduction (Lower boundary)\n",
+    "    Nz      = 61,    # Number of depth grid points to solve the 1-D heat conduction equation\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "88a0e044",
+   "metadata": {},
+   "source": [
+    "Create a model for the single asteroid"
    ]
   },
   {
@@ -164,13 +280,64 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Run TPM and save the result\n",
-    "savepath = \"TPM_Ryugu.jld2\"\n",
-    "AsteroidThermoPhysicalModels.run_TPM!(shape, et_range, sun_ryugu, thermo_params, savepath, save_range)\n",
+    "stpm = AsteroidThermoPhysicalModels.SingleTPM(shape, thermo_params;\n",
+    "    SELF_SHADOWING = true,  # Enable self-shadowing, i.e., shadowing by local topography\n",
+    "    SELF_HEATING   = true,  # Enable self-heating, i.e., energy exchange between interfacing facets\n",
+    "    SOLVER         = AsteroidThermoPhysicalModels.ForwardEulerSolver(thermo_params),  # Solver for the 1-D heat conduction equation\n",
+    "    BC_UPPER       = AsteroidThermoPhysicalModels.RadiationBoundaryCondition(),       # Upper boundary condition (surface layer)\n",
+    "    BC_LOWER       = AsteroidThermoPhysicalModels.InsulationBoundaryCondition(),      # Lower boundary condition (bottom layer)\n",
+    ");"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cb5612b1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "AsteroidThermoPhysicalModels.init_temperature!(stpm, 240);  # Intial temperature [K]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "45e0c00e",
+   "metadata": {},
+   "source": [
+    "Run TPM"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e95fb74b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "times_to_save = ephem.time[end-nsteps_in_cycle:end]  # Save temperature during the final rotation\n",
+    "face_ID = [1, 2, 3, 4, 10]  # Face indices to save subsurface temperature\n",
     "\n",
-    "JLD2.jldopen(savepath, \"r+\") do file\n",
-    "    file[\"RYUGU_TO_J2000\"] = RYUGU_TO_J2000[save_range]\n",
-    "end;"
+    "result = AsteroidThermoPhysicalModels.run_TPM!(stpm, ephem, times_to_save, face_ID; show_progress=false);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2d9a2f78",
+   "metadata": {},
+   "source": [
+    "Save TPM result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "713de874",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dirpath = \"./output\"\n",
+    "mkpath(dirpath)\n",
+    "AsteroidThermoPhysicalModels.export_TPM_results(dirpath, result)"
    ]
   },
   {
@@ -178,7 +345,64 @@
    "id": "44f03531",
    "metadata": {},
    "source": [
-    "# Visualize the result"
+    "# Data analysis and visualization"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f872017f",
+   "metadata": {},
+   "source": [
+    "Plot the energy conservation ratio `E_cons` to check computational convergence.\n",
+    "\n",
+    "`E_cons` is defined as the ratio of the output energy to the input energy from the entire surface of the asteroid over one rotation.\n",
+    "As the thermal calculation converges, `E_cons` approaches 1."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8798cbf0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = Figure()\n",
+    "ax = Axis(fig[1, 1],\n",
+    "    xlabel = \"Time [h]\",\n",
+    "    ylabel = \"E_cons [-]\",\n",
+    ")\n",
+    "\n",
+    "xs = @. (ephem.time - ephem.time[begin]) / 3600  # Time since the beginning of TPM in unit of hour\n",
+    "\n",
+    "hlines!(ax, [1], color=:black, linestyle=:dash)\n",
+    "scatterlines!(ax, xs, result.E_cons, markercolor=:blue, marker=:circle)\n",
+    "\n",
+    "display(fig)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f6da4175",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_shape(shape; colorbar_title=\"Radius [m]\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "967847a4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_shape(shape;\n",
+    "    title          = \"Temperature map at the final time step.\",\n",
+    "    colorbar_title = \"Temperature [K]\",\n",
+    "    intensity      = result.surface_temperature[:, end],\n",
+    "    colorscale     = :thermal,\n",
+    ")"
    ]
   },
   {
@@ -187,82 +411,28 @@
    "id": "2973d99f",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "surface_temperature(shape::AsteroidThermoPhysicalModels.ShapeModel) = [facet.temps[begin] for facet in shape.facets]\n",
-    "\n",
-    "function VectorVector2Matrix(v)\n",
-    "    m = Matrix{eltype(v[end])}(undef, length(v), 3)\n",
-    "    for i in eachindex(v)\n",
-    "        m[i, :] .= v[i]\n",
-    "    end\n",
-    "    m\n",
-    "end\n",
-    "\n",
-    "function face2node(nodes, faces, data)\n",
-    "    node_data = Vector{eltype(data)}(undef, size(nodes, 1))\n",
-    "    \n",
-    "    for node_index in eachindex(node_data)\n",
-    "        face_indices = findall(faces.==node_index)\n",
-    "        if length(face_indices) == 0\n",
-    "            node_data[node_index] = NaN\n",
-    "            continue\n",
-    "        end\n",
-    "        node_data[node_index] = Statistics.mean(data[face_index[1]] for face_index in face_indices)\n",
-    "    end\n",
-    "    node_data\n",
-    "end\n",
-    "\n",
-    "function draw(shape::AsteroidThermoPhysicalModels.ShapeModel; data=nothing, r̂☉=[1,0,0.], colormap=:viridis, strokecolor=:gray20, strokewidth=1)\n",
-    "    nodes = VectorVector2Matrix(shape.nodes)\n",
-    "    faces = VectorVector2Matrix(shape.faces)\n",
-    "\n",
-    "    if data === nothing\n",
-    "        color = :gray\n",
-    "    elseif data == :radius\n",
-    "        color = [norm(v) for v in eachrow(nodes)]\n",
-    "    elseif data == :temperature\n",
-    "        surf_temps = surface_temperature(shape)\n",
-    "        color = face2node(nodes, faces, surf_temps)\n",
-    "    elseif data == :illumination\n",
-    "        illumination = Float64.(isIlluminated(r̂☉, shape))\n",
-    "        color = face2node(nodes, faces, illumination)\n",
-    "    else\n",
-    "        color = face2node(nodes, faces, data)\n",
-    "    end\n",
-    "\n",
-    "    scene = GLMakie.poly(nodes, faces,\n",
-    "        color=color, colormap=colormap,\n",
-    "        strokecolor=strokecolor, strokewidth=strokewidth,\n",
-    "        size=(1500,1500)\n",
-    "    )\n",
-    "\n",
-    "    GLMakie.set_theme!(backgroundcolor=:white)\n",
-    "    display(scene)\n",
-    "end"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc222fce",
+   "id": "9fd119d1",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "draw(shape; data=:temperature, colormap=:vik, strokewidth=0.05)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.8.4",
+   "display_name": "Julia 1.10.2",
    "language": "julia",
-   "name": "julia-1.8"
+   "name": "julia-1.10"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.8.4"
+   "version": "1.10.2"
   }
  },
  "nbformat": 4,
