--- a/TPM_Ryugu/TPM_Ryugu.ipynb
+++ b/TPM_Ryugu/TPM_Ryugu.ipynb
@@ -32,13 +32,13 @@
    "outputs": [],
    "source": [
     "# using Pkg\n",
-    "# Pkg.add(\"SPICE\")\n",
-    "# Pkg.add(\"Downloads\")\n",
-    "# Pkg.add(\"StaticArrays\")\n",
-    "# Pkg.add(\"Rotations\")\n",
     "# Pkg.add(\"CairoMakie\")\n",
+    "# Pkg.add(\"Downloads\")\n",
+    "# Pkg.add(\"Rotations\")\n",
+    "# Pkg.add(\"SPICE\")\n",
+    "# Pkg.add(\"StaticArrays\")\n",
     "\n",
-    "# Pkg.add(url=\"https://github.com/Astroshaper/AsteroidThermoPhysicalModels.jl\")"
+    "# Pkg.add(url=\"https://github.com/Astroshaper/AsteroidThermoPhysicalModels.jl#v0.0.7\")"
    ]
   },
   {
@@ -238,31 +238,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "k  = 0.1     # Thermal conductivity\n",
-    "ρ  = 1270.0  # Material density\n",
-    "Cₚ = 600.0   # Heat capacity at constant pressure\n",
-    "    \n",
-    "l = AsteroidThermoPhysicalModels.thermal_skin_depth(P, k, ρ, Cₚ)  # Thermal skin depth\n",
-    "Γ = AsteroidThermoPhysicalModels.thermal_inertia(k, ρ, Cₚ)        # Thermal inertia"
+    "k  = 0.1     # Thermal conductivity [W/m/K]\n",
+    "ρ  = 1270.0  # Density [kg/m³]\n",
+    "Cₚ = 600.0   # # Heat capacity at constant pressure [J/kg/K]\n",
+    "\n",
+    "R_vis = 0.059  # Reflectance in visible light [-]\n",
+    "R_ir  = 0.0    # Reflectance in thermal infrared [-]\n",
+    "ε     = 0.9    # Emissivity [-]\n",
+    "\n",
+    "z_max = 0.5                 # Depth of the lower boundary of a heat conduction equation [m]\n",
+    "n_depth = 101               # Number of depth steps\n",
+    "Δz = z_max / (n_depth - 1)  # Depth step width [m]\n",
+    "\n",
+    "thermo_params = AsteroidThermoPhysicalModels.ThermoParams(k, ρ, Cₚ, R_vis, R_ir, ε, z_max, Δz, n_depth);"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d50a811",
+   "id": "9125b1f2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "thermo_params = AsteroidThermoPhysicalModels.thermoparams(\n",
-    "    P       = P,     # Rotation period\n",
-    "    l       = l,     # Thermal skin depth\n",
-    "    Γ       = Γ,     # Thermal inertia\n",
-    "    A_B     = 0.04,  # Bond albedo\n",
-    "    A_TH    = 0.0,   # Albedo in thermal infrared\n",
-    "    ε       = 1.0,   # Emissivity\n",
-    "    z_max   = 0.6,   # Maximum depth to solve the 1-D heat conduction (Lower boundary)\n",
-    "    Nz      = 61,    # Number of depth grid points to solve the 1-D heat conduction equation\n",
-    ")"
+    "l = AsteroidThermoPhysicalModels.thermal_skin_depth(P, k, ρ, Cₚ)  # Thermal skin depth [m]\n",
+    "Γ = AsteroidThermoPhysicalModels.thermal_inertia(k, ρ, Cₚ)        # Thermal inertia [kg^(1/2) m^(1/2) s^(-1)]\n",
+    "α = AsteroidThermoPhysicalModels.thermal_diffusivity(k, ρ, Cₚ)    # Thermal diffusivity [m²/s]\n",
+    "\n",
+    "println(\"Thermal skin depth  : $l  [m]\")\n",
+    "println(\"Thermal inertia     : $Γ  [tiu]\")\n",
+    "println(\"Thermal diffusivity : $α  [m²/s]\")"
    ]
   },
   {
@@ -280,10 +284,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "stpm = AsteroidThermoPhysicalModels.SingleTPM(shape, thermo_params;\n",
+    "stpm = AsteroidThermoPhysicalModels.SingleAsteroidTPM(shape, thermo_params;\n",
     "    SELF_SHADOWING = true,  # Enable self-shadowing, i.e., shadowing by local topography\n",
     "    SELF_HEATING   = true,  # Enable self-heating, i.e., energy exchange between interfacing facets\n",
-    "    SOLVER         = AsteroidThermoPhysicalModels.ForwardEulerSolver(thermo_params),  # Solver for the 1-D heat conduction equation\n",
+    "    SOLVER         = AsteroidThermoPhysicalModels.CrankNicolsonSolver(thermo_params), # Solver for the 1-D heat conduction equation\n",
     "    BC_UPPER       = AsteroidThermoPhysicalModels.RadiationBoundaryCondition(),       # Upper boundary condition (surface layer)\n",
     "    BC_LOWER       = AsteroidThermoPhysicalModels.InsulationBoundaryCondition(),      # Lower boundary condition (bottom layer)\n",
     ");"
@@ -353,10 +357,9 @@
    "id": "f872017f",
    "metadata": {},
    "source": [
-    "Plot the energy conservation ratio `E_cons` to check computational convergence.\n",
-    "\n",
-    "`E_cons` is defined as the ratio of the output energy to the input energy from the entire surface of the asteroid over one rotation.\n",
-    "As the thermal calculation converges, `E_cons` approaches 1."
+    "To check the convergence of a calculation, you can examine the ratio of the energy entering the asteroid to the energy leaving it.\n",
+    "This package records the out-going energy (`result.E_out`, [W]) and the in-coming energy (`result.E_in`, [W]) at each time step.\n",
+    "If there are no changes in solar distance or topographic effects, it converges to 1, averaged over the rotation period."
    ]
   },
   {
@@ -369,15 +372,24 @@
     "fig = Figure()\n",
     "ax = Axis(fig[1, 1],\n",
     "    xlabel = \"Time [h]\",\n",
-    "    ylabel = \"E_cons [-]\",\n",
+    "    ylabel = \"E_out / E_in [-]\",\n",
     ")\n",
     "\n",
     "xs = @. (ephem.time - ephem.time[begin]) / 3600  # Time since the beginning of TPM in unit of hour\n",
+    "ys = @. result.E_out / result.E_in               # Ratio of outgoing to incoming energy\n",
     "\n",
     "hlines!(ax, [1], color=:black, linestyle=:dash)\n",
-    "scatterlines!(ax, xs, result.E_cons, markercolor=:blue, marker=:circle)\n",
+    "scatterlines!(ax, xs, ys, markercolor=:blue, marker=:circle)\n",
     "\n",
     "display(fig)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "838f10ab",
+   "metadata": {},
+   "source": [
+    "3D quick-look function"
    ]
   },
   {
@@ -387,6 +399,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Plot the shape of the asteroid with colorbar showing radius (default)\n",
     "plot_shape(shape; colorbar_title=\"Radius [m]\")"
    ]
   },
@@ -397,6 +410,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Plot the shape of the asteroid with colorbar showing surface temperature at the final time step\n",
     "plot_shape(shape;\n",
     "    title          = \"Temperature map at the final time step.\",\n",
     "    colorbar_title = \"Temperature [K]\",\n",
@@ -404,14 +418,6 @@
     "    colorscale     = :thermal,\n",
     ")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2973d99f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -424,15 +430,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.10.2",
+   "display_name": "Julia 1.11.5",
    "language": "julia",
-   "name": "julia-1.10"
+   "name": "julia-1.11"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.10.2"
+   "version": "1.11.5"
   }
  },
  "nbformat": 4,
